--- a/package.json
+++ b/package.json
@@ -11,18 +11,25 @@
   "dependencies": {
     "@digdir/designsystemet-css": "^0.10.0",
     "@digdir/designsystemet-theme": "^0.15.3",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.7.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "0.9.0",
     "jspdf": "^2.5.2",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.454.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.2"
+    "react-resizable-panels": "^2.1.6",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18",
